[metadata]
name = AIM
description = A tool for calculating vibrational spectra
author = Kim E. van Adrichem
platforms = unix, linux, osx, win32
version = 1.0.1
classifiers =
    Programming Language :: Python :: 3

[options]
packages = 
    AIM
    AIM.sourcecode
include_package_data = True
install_requires = 
    numpy >= 1.17, <1.22
    numba >= 0.45
    MDAnalysis >= 0.20

python_requires = 
    >=3.7


[options.package_data]
* = 
    sourcefiles/*
    extra_maps/*


[options.entry_points]
console_scripts =
    AIM = AIM.AIM:main
    